# paper-ecash-analytics

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html  input.css  tailwind.config.js
.github/workflows/: deploy.yml
src/: lib.rs
src/api/: client.rs  mod.rs  types.rs
src/components/: badge.rs  button.rs  card.rs  empty_state.rs  input.rs  mod.rs  modal.rs  redemption_chart.rs  spinner.rs  toast.rs
src/features/: mod.rs
src/features/import/: create_note_set_modal.rs  import_modal.rs  mod.rs
src/features/note_set_detail/: auto_refresh.rs  import_notes_modal.rs  mod.rs  note_row.rs  note_set_detail_view.rs  qr_scanner_modal.rs
src/features/note_set_list/: mod.rs  note_set_card.rs  note_set_list_view.rs
src/features/settings/: mod.rs  settings_view.rs
src/models/: mod.rs  note.rs  note_set.rs  oob_notes.rs  paper_note.rs
src/state/: mod.rs  persistence.rs  store.rs
src/utils/: encoding.rs  mod.rs  qr_scanner.rs  time.rs
